# vectorized_find

./: .gitignore  CMakeLists.txt  README.md  intrinsic_perf.txt  main.cpp  naive_perf.txt  nobreak_perf.txt  results.txt
include/: find.hpp
src/: CMakeLists.txt  benchmark.cpp  compare.cpp  cpp.cpp  intrinsic.cpp  intrinsic2.cpp  intrinsic_float.cpp  naive.cpp  naive_strided.cpp  nobreak.cpp
src/benchmarks/: benchmarks.cpp  benchmarks.hpp
src/compare/: compare_find.cpp  compare_find.hpp
src/cpp_stl/: cpp_stl_find.cpp  cpp_stl_find.hpp
src/intrinsics/: intrinsic_find.cpp  intrinsic_find.hpp
src/naive/: naive_find.cpp  naive_find.hpp
src/utils/: utils.cpp  utils.hpp
